# scrapauto

./: .env  .gitignore  Dockerfile  README.md  app.py  celerybeat-schedule  docker-compose.prod.yml  docker-compose.yml  extract.py  hello.py  logger.py  main.py  parse_data.py  pyproject.toml
.github/workflows/: deploy.yml
celery_app/: app.py  tasks.py
complex_agent/: complex_agent.py  tools.py
extractors/: autocosmos.py  dolar.py  meli.py
infoparser/: Dockerfile  crud_auto.py  parser_agent.py  schemas.py
nginx/: Dockerfile  entrypoint.sh
nginx/conf.d/: default.conf
parser/: crud_auto.py  schemas.py
scraper/: autocosmos.py  cosmoautos.py  dolar.py
