[project]
name = "scrapauto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "langchain>=0.3.1",
    "openai>=1.51.0",
    "pydantic>=2.9.2",
    "pymongo>=4.10.1",
    "python-dotenv>=1.0.1",
]
