[project]
name = "scrapauto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "fastapi>=0.115.0",
    "langchain-openai>=0.2.2",
    "langchain>=0.3.1",
    "motor>=3.6.0",
    "openai>=1.51.0",
    "pydantic>=2.9.2",
    "pymongo>=4.9,<4.10",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.31.0",
]

[tool.uv]
package = false
dev-dependencies = [
    "ipython>=8.28.0",
    "mypy>=1.11.2",
    "pre-commit>=3.8.0",
]
